# rust-todo

api/: .gitignore  Cargo.toml  docker-compose.yml
api/.cargo/: config.toml
api/prisma/: schema.prisma
api/prisma/migrations/20220923143950_init/: migration.sql
api/src/: main.rs
api/src/todos/: controller.rs  mod.rs  service.rs
api/src/utils/: errors.rs  types.rs
